--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "vue2-admin-manage",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -42,7 +42,8 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+      "parser": "@babel/eslint-parser",
+      "requireConfigFile":false
     },
     "rules": {
       "vue/multi-word-component-names": "off"
