--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "@babel/eslint-parser",
-      "requireConfigFile":false
+      "parser": "@babel/eslint-parser"
     },
     "rules": {
       "vue/multi-word-component-names": "off"
